tests/input/errors/generated_pkgfmt/vars.go
package errors

var b []byte
